cli/tests/snapshot/inputs/errors/array_merge_fail.ncl
# capture = 'stderr'
# command = []
let foo = [1,2,3] in
foo & [1,2,4]
